Some z-index bugs fixed

--- a/src/components/TransitionOut/index.sass
+++ b/src/components/TransitionOut/index.sass
@@ -3,7 +3,7 @@
   top: 0
   height: 100%
   width: 100%
-  z-index: 10
+  z-index: 12
   margin: 0
 
 .transitionOut__strip
